attempt to park car back

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <input type="text" id="picURLIn" value="" placeholder="Picture Url">
 <input type="text" id="descriptionIn" value="" placeholder="Description">
 <button onClick='addCar()'>Park in Garage</button>
-<ul id='allCars'>
-  <li>NONE</li>
-</ul>
+<div id='allCars'>
+  <h2>Cars in garage</h2>
+</div>
+<div id='bringBack'>
+  <h2>Cars out for a drive</h2>
   </body>
 </html>
